feat : 완성
사실 arrayList 자원 공유 받음 ㅋ